--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
-* {
-    font-family: 'Noto Sans TC';
-}
+// @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+// * {
+//     font-family: 'Noto Sans TC';
+// }
 
 html,
 body {
