--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -49,7 +49,7 @@
 </div>
 
 <div class="parallax">
-  <img src="https://picsum.photos/id/3/600/300">
+  <img src="https://i.imgur.com/LxnIm5j.jpg">
   <div>
     <h3>急用錢？找我們</h3>
   </div>
