--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,21 @@ body {
     margin: 5px;
   }
 }
+
+
+.table {
+  width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  border-collapse: collapse;
+  box-sizing: border-box;
+}
+
+.table-bordered td, .table-bordered th {
+  border: 1px solid #dee2e6;
+}
+.table td, .table th {
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
