--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -1,3 +1,6 @@
+a {
+  text-decoration: none;
+}
 mat-toolbar-row {
   > a {
     color: #fff;
@@ -38,9 +41,9 @@ mat-toolbar-row {
 .parallax {
   margin: 30px 0 30px 0;
   position: relative;
-  display:  flex;
+  display: flex;
   align-items: center;
-  justify-content:  center;
+  justify-content: center;
   > img {
     height: auto;
     width: 100%;
@@ -59,4 +62,8 @@ mat-toolbar-row {
       text-align: center;
     }
   }
+}
+
+table {
+  text-align: center;
 }
