--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,9 +18,65 @@
   }
 }
 
+.bowrain {
+  background: linear-gradient(90deg, #34a853 4%, #4285f4 0%) top/100% 34% no-repeat,
+    linear-gradient(90deg, #fbbc04 50%, #4285f4 0%) top/100% 82% no-repeat,
+    linear-gradient(90deg, #fbbc04 10%, #ea4335 0%) top/100% 100%;
+  margin: 0px;
+  border-radius: 10px;
+  > mat-card {
+    border-radius: 4px;
+    margin: 4px;
+  }
+}
+
 .flex-div {
   flex-wrap: wrap;
   > .flex-item {
     flex: 1 calc(100% / 2 - (5px * 2 -1)) !important;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .flex-div {
+    flex-wrap: wrap;
+    > .flex-item {
+      flex: 1 calc(100% / 3 - (5px * 3 -1)) !important;
+    }
+  }
+}
+
+::ng-deep .carousel-item {
+  > img {
+    width: 100%;
+  }
+  > .carousel-caption {
+    background-color: #ffffffb8;
+    color: #000000;
+    bottom: 50px;
+    > p {
+      white-space: pre-line;
+    }
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  ngb-carousel {
+    max-width: 70%;
+    margin: auto;
+  }
+}
+
+.case {
+  p {
+    margin-bottom: 5px;
+  }
+  .mat-chip {
+    background-color: #3f51b5;
+    color: #fff;
+    border-radius: 16px;
+    text-align: center;
+  }
+  button {
+    border-radius: 0px;
   }
 }
