--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,10 @@
   > h4 {
     text-align: center;
   }
-  > button {
+  > a {
     color: #1a73e8;
     display: block;
-    min-width: 120px;
+    width: 120px;
     margin: auto auto 30px auto;
   }
   > p {
