--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,15 +20,10 @@
 <div class="container">
   <p style="margin: 0px;text-align: center;">使用案例</p>
   <div class="flex-div case">
-    <div class="flex-item">
-      <p class="mat-chip">台南 日日會</p>
-      <img src="assets/pawn/image/0916159046.jpg" width="100%">
-      <button mat-raised-button color="primary" routerLink="0916159046">前往觀看</button>
-    </div>
-    <div class="flex-item">
-      <p class="mat-chip">台南 借你錢</p>
-      <img src="assets/pawn/image/0981383197.jpg" width="100%">
-      <button mat-raised-button color="primary" routerLink="0981383197">前往觀看</button>
+    <div class="flex-item" *ngFor="let pawn of pawns">
+      <p class="mat-chip">{{pawn.storeName}}</p>
+      <img [src]="'assets/pawn/image/'+pawn.tel+'.jpg'" width="100%">
+      <button mat-raised-button color="primary" [routerLink]="pawn.tel">前往觀看</button>
     </div>
   </div>
 </div>
