--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="container">
-    <h2 style="text-align: center;">{{storeInfo.slogan}}</h2>
+    <h2 style="text-align: center;white-space: pre-line">{{storeInfo.slogan}}</h2>
   </div>
 
   <div class="container">
