--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,8 @@
 
 <div class="parallax">
   <img src="https://picsum.photos/id/122/800/530">
-  <div>
+  <div style="-webkit-filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));
+  filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));">
     <h3>立即加入，開拓客源</h3>
   </div>
 </div>
