--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,6 @@
     width: 120px;
   }
   > p {
-    display: flex;
     margin: 5px 0 5px 0;
     > img {
       width: 20px;
@@ -42,15 +41,24 @@
   }
   > .flex-case {
     display: flex;
-    margin: 0 5px 10px;
+    margin: 0 5px 15px;
     flex: 1 calc(100% / 2 - (14px));
     flex-wrap: wrap;
     align-content: space-between;
+    background-color: rgba(0,0,0,0.05);
+    border-radius: 5px;
+    overflow: hidden;
     > * {
       width: 100%;
     }
+    > img {
+      height: 50%;
+      width: 100%;
+      -webkit-filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));
+      filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));
+    }
     .mat-chip {
-      border-radius: 8px;
+      border-radius: 0px;
       padding: 3px 0;
     }
   }
@@ -72,6 +80,8 @@
     background-color: #ffffffb8;
     color: #000000;
     bottom: 50px;
+    -webkit-filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));
+      filter: drop-shadow(12px 5px 7px rgba(0, 0, 0, 0.65));
     > p {
       white-space: pre-line;
     }
